syntax = "proto3";
option go_package = ".;api";

import "google/protobuf/empty.proto";

package api;

message ShipList {
  message Ship {
    int32  id = 1;
    string name = 2;
    string ip = 3;
    string port = 4;
    int32 playerCount = 5;
  }
  repeated Ship ships = 1;
}

message RegistrationRequest {
    string name = 1;
    string address = 2;
    int32 port = 3;
    int32 maxPlayers = 4;
}

// ShipgateService provides game functionality and is intended for use by
// ship servers serving players.
service ShipgateService{
    // GetActiveShips returns the list of Ships that currently connected to the
  // shipgate and ready to receive players.
  rpc GetActiveShips (google.protobuf.Empty) returns (ShipList);

  // RegisterShip informs the shipgate that it is able to serve players.
  rpc RegisterShip(RegistrationRequest) returns (google.protobuf.Empty);
}